# opencv_projects

./: OpenCV_NOTES.md  README.md
Image_3D_2D/: Image_3D_2D.md  warpframe_3d_2d.py
coordinates/: README.md  sub_pixel.md  xy_col_row.md
format_code/: format_code.bat
imread_cvtColor/: compare_im.py  imread_cvtColor.md
opencv_gpu/: CMakeLists.txt  README.md  surf_keypoint_matcher.cpp  surf_orb_cuda_cv330.cpp
real_time_pose_estimation/: CMakeLists.txt  README.md
real_time_pose_estimation/src/: main_detection.cpp  main_registration.cpp
